--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 
 /**
  * Table of Contents
+ *
+ * 0. Reset
  * 1. General
  * 2. Structure
  * 3. Site Header
@@ -17,10 +19,6 @@
  * 9. Prism
  * 10. SimpleLightbox
  *
- */
-/**
- * 0. Reset
- * normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css
  */
  html {
     -ms-text-size-adjust: 100%;
@@ -1023,6 +1021,11 @@
     -webkit-animation-delay: 1s;
     animation-delay: 1s;
   }
+
+  .delay_2s {
+    -webkit-animation-delay: 2s;
+    animation-delay: 2s;
+  }
   
   @-webkit-keyframes fadeInDown {
     from {
@@ -1179,11 +1182,13 @@
     overflow: hidden;
     pointer-events: auto;
     position: relative;
-    -webkit-transition: -webkit-transform .25s ease-in-out;
-    -webkit-transition: transform .25s ease-in-out;
-    transition: transform .25s ease-in-out;
+    -webkit-transition: -webkit-transform .9s ease-in-out;
+    -webkit-transition: transform .9s ease-in-out;
+    transition: transform .9s ease-in-out;
     z-index: 1;
   }
+
+  
   
   .site-content {
     -webkit-box-flex: 1;
